# pheno-tracing

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  PROMOTION.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SPEC.md  VERSION.toml  WORKLOG.md  deny.toml  justfile  llms.txt  renovate.json5
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  cargo-deny.yml  ci.yml  deny.yml  release.yml  scorecard.yml
benches/: sampler_benchmarks.rs
docs/: AGENTS_SUPPLEMENT.md  HEXAGONAL_PORTS.md  RUNBOOK.md  THREAT_MODEL.md
docs/sessions/: README.md  SESSION_TEMPLATE.md
examples/otel-collector/: collector.yaml
pact/: verify.rs
src/: adapters.rs  arbitrary.rs  cardinality.rs  cardinality_cap.rs  compat.rs  config.rs  env.rs  error.rs  lib.rs  metrics.rs  otlp.rs  port.rs  sampling.rs
tests/: adapter_tests.rs  chaos_injection_test.rs  otlp_smoke.rs  port_integration.rs  proptest_smoke.rs  sampling_cardinality_test.rs  sampling_port.rs  tracing-0-2-compat.rs
tests/pact/: verify.rs
